@@ -14,6 +14,13 @@ All notable changes to this project will be documented in this file.
 The format is based on https://keepachangelog.com/[Keep a Changelog], and this
 project adheres to https://semver.org/[Semantic Versioning].
 
+== {compare-url}/v0.11.3\...HEAD[Unreleased]
+
+=== Changed
+
+* Read only the first 7,090 bytes of the input data when encoding
+  ({pull-request-url}/585[#585])
+
 == {compare-url}/v0.11.2\...v0.11.3[0.11.3] - 2024-07-22
 
 === Changed
